src/objects/Affiliation_GLBL__c.object
<CustomObject>
    <description>Object to track affiliations between accounts for searching purposes. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
    <fields>
        <fullName>Account_Cust_Id_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Affiliate Account
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Affiliate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations (Affiliate Account)</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Cust_Name_GLBL__c</fullName>
        <formula>Account_Cust_Id_GLBL__r.Name</formula>
        <label>Affiliate Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_GLBL__c</fullName>
        <description>Used to help indicate direction of influence. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Afltn_Clsfctn_Cd_GLBL__c</fullName>
        <description>Affiliation Classification Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Affiliation Classification Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Afltn_Party_Rcrd_Typ_Cd_GLBL__c</fullName>
        <description>Affiliate Party Record Type Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Affiliate Party Record Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Afltn_Role_Cd_GLBL__c</fullName>
        <description>Affiliation Role Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Affiliation Role Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Afltn_Role_Desc_GLBL__c</fullName>
        <description>Affiliation Role Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Afltn_Src_Sys_Cd_GLBL__c</fullName>
        <description>Affiliation Original Source Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Affiliation Original Source Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Del_Date_GLBL__c</fullName>
        <description>Delete Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Del_Flg_GLBL__c</fullName>
        <description>Delete Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Delete Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Cust_Id_GLBL__c</fullName>
        <description>Department Party Id
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Department Party Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efctv_End_Dt_GLBL__c</fullName>
        <description>End Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Efctv_Start_Dt_GLBL__c</fullName>
        <description>Effective Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Phone1 Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Phone1 Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Elc_Txt_GLBL__c</fullName>
        <description>Email Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Extnsn_Cd_GLBL__c</fullName>
        <description>Phone1 Extension Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Phone Number Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Fax Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Fax Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Extnsn_Cd_GLBL__c</fullName>
        <description>Fax Extension Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Fax Number Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Txt_GLBL__c</fullName>
        <description>Fax Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Fax Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Txt_GLBL__c</fullName>
        <description>Phone1 Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Phone Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Web_Txt_GLBL__c</fullName>
        <description>Web Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Web Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gco_Party_Afltn_Id_GLBL__c</fullName>
        <description>Party Affiliation Id
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <externalId>true</externalId>
        <label>Party Affiliation Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Cd_GLBL__c</fullName>
        <description>Hierarchy Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Lvl_Txt_GLBL__c</fullName>
        <description>Hierarchy Level Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Hierarchy Level Text</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inflnc_Lvl_Cd_GLBL__c</fullName>
        <description>Influence Level Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Influence Level Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inflnc_Thrptc_Area_Cd_GLBL__c</fullName>
        <description>Influence Therapeutic Area Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Influence Therapuetic Area Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Tmstmp_GLBL__c</fullName>
        <description>Source Load Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Source Load Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Usr_GLBL__c</fullName>
        <description>ODS Load User
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>ODS Load User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Tmstmp_GLBL__c</fullName>
        <description>Source Update Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Source Update Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Usr_GLBL__c</fullName>
        <description>ODS Last Update User
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>ODS Last Update User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Cntry_Cd_GLBL__c</fullName>
        <description>Party Country Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Party Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Rcrd_Typ_Cd_GLBL__c</fullName>
        <description>Party Record Type Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Party Record Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Rank_Nbr_GLBL__c</fullName>
        <description>Priority Rank Number
Customer ODS to Mercury Mapping</description>
        <label>Priority Rank Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rltnshp_Sts_Cd_GLBL__c</fullName>
        <description>Relationship Status Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Relationship Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rltnshp_Sts_Desc_GLBL__c</fullName>
        <description>Oliver Dunford 6th Jan, Mastered ODS fields.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rltnshp_Typ_Cd_GLBL__c</fullName>
        <description>Maps to Customer.ODS.Relationship Type field. Created by Oliver Dunford 25th Oct 2013
Relationship Type Code
Customer ODS to Mercury Mapping</description>
        <label>Relationship Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rltnshp_Typ_Desc_GLBL__c</fullName>
        <description>Oliver Dunford 6th Jan, Mastered ODS Information</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_GLBL__c</fullName>
        <description>Role describing relationship among accounts.  Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliated with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;T Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_ID_GLBL__c</fullName>
        <description>Role ID associated with specified Role. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Role ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Block_Flg_GLBL__c</fullName>
        <description>Source Block Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Source Block Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Sys_Cd_GLBL__c</fullName>
        <description>Source System Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/5/2013</description>
        <label>Source System Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Affiliation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>